Minor text fixes

--- a/corr_matrix.ipynb
+++ b/corr_matrix.ipynb
@@ -44,15 +44,15 @@
     "## Постановка задачи и описание данных:\n",
     "<!-- $d^{real}_{ij}$ - реальная корреспонденция между районами $i$ и $j$ (*n_livers_i_to_j*) -->\n",
     "<!-- корреспонденция - ср объем пользователей, вот добираются из а в б -->\n",
-    "$L_i$ - полное число людей, ездящих на работу из района $i$ ($\\sum\\limits_{zone_i} d_{zone_ij}$)\n",
+    "$L_i$ - полное число людей, ездящих на работу из района $i$ ($\\sum\\limits_{i} d_{ij}$)\n",
     "\n",
-    "$W_j$ - полное число людей, приезжающих на работу в район $j$ ($\\sum\\limits_{zone_j} d_{izone_j}$)\n",
+    "$W_j$ - полное число людей, приезжающих на работу в район $j$ ($\\sum\\limits_{j} d_{ij}$)\n",
     "\n",
     "$c_{ij}$ - издержки на перемещение из $i$ в $j$ (**время**)\n",
     "\n",
     "$F(c_{ij})$ - гравитационная функция от издержек \n",
     "\n",
-    "$n =$ num_of_regions\n",
+    "$n =$ n_district\n",
     "\n",
     "<!-- (предположительно, убывающая) -->\n",
     "****"
@@ -1071,9 +1071,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Исходя из графика невязок, оптимальный $\\epsilon$ для данного метода = 0.2.\n",
+    "Исходя из графика невязок, для данного метода оптимальный $\\epsilon = 0.2$.\n",
     "\n",
-    "Однако он слишком близко расположен к взрывному скачку невязки, что делает его использование небезопасным (есть риск, что на похожих данных он не будет оптимальным). Поэтому мы рекомендуем для данной модели использовать $\\epsilon$=0.01, при нем sinkhorn-балансировка занимает всего 30 итераций в среднем."
+    "Однако он слишком близко расположен к взрывному скачку невязки, что делает его использование небезопасным (есть риск, что на похожих данных он не будет оптимальным).\n",
+    "\n",
+    "Поэтому мы рекомендуем для данной модели использовать $\\epsilon = 0.01$, при нем sinkhorn-балансировка занимает всего 30 итераций в среднем.\n",
+    "\n",
+    "К тому же, при $\\epsilon = 0.01$ достигается тот же оптимальный $\\alpha$, что и более мелких значениях."
    ]
   }
  ],
