--- a/corr_matrix.ipynb
+++ b/corr_matrix.ipynb
@@ -1350,8 +1350,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Можно заметить, что в экспоненциальной модели с двумя параметрами $\\epsilon$ оказывает более сужественное влияние на невязку, чем с одним.\n",
-    "\n",
     "Исходя из графика невязок, для данного метода оптимальный $\\epsilon = 0.2$.\n",
     "\n",
     "Однако он слишком близко расположен к взрывному скачку невязки, что делает его использование небезопасным (есть риск, что на похожих данных он не будет оптимальным).\n",
@@ -1368,7 +1366,7 @@
     "## Выводы\n",
     "\n",
     "* Найдены оптимальные параметры $\\alpha$ и $\\beta$ модели за счет определения оптимальной точности сходимости $A$, $B$\n",
-    "* В простой модели с одним параметром увеличение $\\epsilon$ на два порядка привело к существенному ускорению (примерно в 3 раза), в модели с двумя параметрами - тоже (примерно в 5 раз). Невязка в обоих случаях уменьшилась, но несущественно (в модели с двумя параметрами - немного сильнее)."
+    "* В простой модели с одним параметром увеличение $\\epsilon$ на два порядка привело к существенному ускорению (примерно в 3 раза), в модели с двумя параметрами - тоже (примерно в 5 раз). Невязка в обоих случаях уменьшилась, но несущественно."
    ]
   }
  ],
